--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "body-parser": "^1.18.0",
         "dotenv": "^4.0.0",
         "express": "4.15.4",
+        "moment": "^2.20.1",
+        "mysql": "^2.15.0",
+        "node-github-webhook": "^1.0.7",
+        "node-telegram-bot-api": "^0.30.0",
         "pg": "^7.3.0",
         "pg-hstore": "^2.3.2",
         "sequelize": "^4.8.4"
